fix grid is not responsive on mobile

--- a/src/components/pages/HomePage/HomePage.css
+++ b/src/components/pages/HomePage/HomePage.css
@@ -41,7 +41,6 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1rem;
     grid-auto-flow: dense;
-    grid-auto-rows: 250px;
 }
 .content-wrapper .title-thumb {
     margin: 20px 0 10px 0;
@@ -58,10 +57,6 @@
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         grid-gap: 1rem;
         grid-auto-flow: dense;
-        grid-auto-rows: 200px;
-    }
-    .content-wrapper .image-product {
-        height: 150px;
     }
 }
 @media screen and (max-width: 576px) {
